--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <style>
         h1 {
-        color: teal;
-        border: 3px teal solid;
-        font-size: 6em;
+        color: rgb(165, 0, 206);
+        border: 3px rgb(165, 0, 206)  solid;
+        font-size: 3em;
         padding: 1em;
         margin: 0.5em;
         text-align: center;
